--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -165,7 +165,7 @@ a {
 .drawzone-subtitle-1-5rem {
   font-size: 1.6rem;
   font-weight: normal;
-  margin-bottom: 5.5rem;
+  margin-bottom: 4.5rem;
   color: #fff;
   font-family: 'Digitalt', serif;
   -webkit-text-stroke: 1px black;
@@ -297,7 +297,7 @@ a {
   flex-direction: column;
   align-items: center;
   width: 380px;
-  height: 550px;
+  height: 516px;
 }
 
 .settings-icon {
@@ -407,7 +407,7 @@ a {
 }
 
 .quickplay-title {
-  font-family: 'Digitalt', sans-serif;
+  font-family: 'Digitalt', Medium;
   font-size: 3.2rem;
   margin-top: -10px;
   margin-bottom: 10px;
@@ -416,21 +416,46 @@ a {
   }
 
 .green-button {
-  background: linear-gradient(#a9ff60, #4cd100);
-  color: white;
-  font-size: 1.4rem;
-  font-weight: bold;
-  padding: 12px 30px;
-  border-radius: 12px;
-  border: none;
-  box-shadow: 0 5px 0 #2b9500;
-  margin-top: 30;
-  margin-bottom: 30;
+  font-family: 'Digitalt', Medium;
+  font-size: 2.2rem;
+  -webkit-text-stroke: 0.5px rgba(0, 0, 0, 0.822);
+  background: linear-gradient(45deg,
+    #86EE04 0%,      /* Heller Ton unten links */
+    #86EE04 49.9%,
+    #67EB00 50%,     /* Dunkler Ton oben rechts */
+    #67EB00 100%);
+  
+  height: 65px;
+  color: rgb(255, 255, 255);
+  padding: 10px 30px;
+  border-radius: 25px;
+  border: 3px solid white;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+
+  box-shadow:
+    inset 0 -4px 0 rgba(0, 0, 0, 0.2),
+    0 5px 0 #00000023;
+
   cursor: pointer;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  transition: all 0.2s ease;
 }
 
+
 .green-button:hover {
-  background: linear-gradient(#b9ff80, #6ee600);
+  background: linear-gradient(45deg,
+    #a1ff4d 0%,      /* Hellerer Ton unten links */
+    #a1ff4d 49.9%,
+    #8ff140 50%,     /* Dunklerer Ton oben rechts */
+    #8ff140 100%);
+}
+
+.green-button:active {
+  transform: translateY(2px);
+  box-shadow:
+    inset 0 -2px 0 rgba(0, 0, 0, 0.3),
+    0 3px 0 #00000040;
 }
 
 .ant-form-item-required::before {
