--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -343,18 +343,50 @@ a {
   border: 2px solid black;
 }
 
-.profile-username {
-  background-color: rgba(0, 0, 0, 0.2);
-  height: 50px;
-  padding: 16px 18px;
-  border-radius: 15px;
-  font-size: 1.1rem;
-  color: white;
-  font-weight: bold;
-  font-family: Arial, sans-serif;
-  flex: 1;
-  text-align: left;
+.avatar-menu {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background: white;
+  border-radius: 8px;
+  padding: 6px 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  transition: opacity 0.2s ease;
+  opacity: 1;
 }
+
+.profile-username {
+  background-color: rgba(0, 0, 0, 0.2)!important; 
+  height: 50px!important;
+  width: 50px;
+  padding: 16px 18px!important;
+  border-radius: 15px!important;
+  font-size: 1.1rem!important;
+  color: white!important;
+  font-weight: bold!important;
+  font-family: Arial, sans-serif!important;
+  flex: 1!important;
+  text-align: left!important;
+}
+
+.profile-username-edit {
+  background-color: rgba(255, 255, 255, 0.918)!important; 
+  height: 50px!important;
+  width: 50px;
+  padding: 16px 18px!important;
+  border-radius: 15px!important;
+  font-size: 1.1rem!important;
+  color: rgb(0, 0, 0)!important;
+  font-weight: bold!important;
+  font-family: Arial, sans-serif!important;
+  flex: 1!important;
+  text-align: left!important;
+}
+
 
 .edit-profile-button {
   width: 100%;
@@ -373,10 +405,55 @@ a {
   cursor: pointer;
 }
 
+.confirm-edit-profile-button {
+  width: 100%;
+  padding: 10px;
+  font-size: 1rem;
+  border-radius: 10px;
+  border: 1.7px solid black;
+  margin-top: 0px;
+  margin-bottom: 13px;
+  background-color: #ff9486;
+  color: #000000;
+  text-align: center;
+  font-family: inherit;
+  font-weight: 500;
+  box-shadow:
+    inset 0 0 0 1px rgba(0, 0, 0, 0.15),
+    0 2px 6px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
 .edit-profile-button:hover {
   background-color: #ececec;
 }
 
+
+.placeholder::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -150px;
+  height: 100%;
+  width: 150px;
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(255, 255, 255, 0.08),
+    transparent
+  );
+  animation: shimmer 1.5s infinite;
+}
+
+.profile-top-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 87px; /* gleicht Ant Design Input-Höhe aus */
+}
 
 .logout-button {
   width: 100%;
