--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -94,6 +94,11 @@ a {
   src: url('/fonts/Koulen.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'Dhyana';
+  src: url('/fonts/Dhyana-Regular.ttf') format('truetype');
+}
+
 .page-background {
   height: 100vh;
   overflow: hidden;
@@ -560,30 +565,30 @@ a {
   }
 
 .green-button {
-  font-family: 'Digitalt', Medium;
-  font-size: 2.2rem;
-  -webkit-text-stroke: 0.5px rgba(0, 0, 0, 0.822);
+  font-family: 'Digitalt', Medium !important;
+  font-size: 2.2rem!important;
+  -webkit-text-stroke: 0.5px rgba(0, 0, 0, 0.822)!important;
   background: linear-gradient(45deg,
     #86EE04 0%,      /* Heller Ton unten links */
     #86EE04 49.9%,
     #67EB00 50%,     /* Dunkler Ton oben rechts */
-    #67EB00 100%);
+    #67EB00 100%)!important;
   
-  height: 65px;
-  color: rgb(255, 255, 255);
-  padding: 10px 30px;
-  border-radius: 25px;
-  border: 3px solid white;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+  height: 65px!important;
+  color: rgb(255, 255, 255)!important;
+  padding: 10px 30px!important;
+  border-radius: 25px!important;
+  border: 3px solid white!important;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4)!important;
 
   box-shadow:
     inset 0 -4px 0 rgba(0, 0, 0, 0.2),
-    0 5px 0 #00000023;
+    0 5px 0 #00000023!important;
 
-  cursor: pointer;
-  margin-top: 10px;
-  margin-bottom: 30px;
-  transition: all 0.2s ease;
+  cursor: pointer!important;
+  margin-top: 10px!important;
+  margin-bottom: 30px!important;
+  transition: all 0.2s ease!important;
 }
 
 
@@ -601,6 +606,170 @@ a {
     inset 0 -2px 0 rgba(0, 0, 0, 0.3),
     0 3px 0 #00000040;
 }
+
+.player-box, .settings-box, .chat-box{
+  background: rgba(255, 255, 255, 0.56);
+  border-radius: 50px;
+  padding: 40px;
+  text-align: center;
+  box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.69), 0 8px 20px rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
+.settings-box {
+  max-width: 500px;
+  width: 100%;
+  height: 750px;
+}
+
+.player-box {
+  max-width: 330px;
+  width: 100%;
+  margin-right: 13px;
+  margin-top:100px;
+  height: 650px;
+}
+
+.chat-box {
+  max-width: 330px;
+  width: 100%;
+  margin-left: 13px;
+  height: 650px;
+  margin-top:100px;
+}
+
+.players-chat-title {
+  font-family: 'Digitalt', Medium;
+  font-size: 2.5rem;
+  font-weight: 1000f;
+  margin-top: -30px;
+  margin-bottom: 10px;
+  color: white;
+  -webkit-text-stroke: 0.5px black;
+}
+
+.lobby-banner {
+  background-color: #8769da;
+  border-radius: 10px;
+  color: white;
+  width: 300px;
+}
+
+.lobby-banner:after {
+  background-color: #8769da;
+  width: 10px;
+  margin-top: -20px;
+  margin-right: 200px;
+}
+
+.player-list {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.player-entry {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #00bfff;
+  border-radius: 12px;
+  padding: 8px 10px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  font-size: 1.2rem;
+  font-family: Arial, sans-serif;
+  box-shadow:
+    inset 0 0 0 2px rgba(255, 255, 255, 0.8),
+    0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.player-info {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.player-avatar {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 1px solid rgb(0, 0, 0);
+}
+
+.player-entry-own {
+  background-color: #0099ff; /* dunkleres Blau */
+}
+
+
+.chat-messages {
+  background-color: white;
+  height: 460px;
+  border-radius: 18px;
+  padding: 2px 8px;
+  margin-bottom: 15px;
+  box-shadow:
+    inset 0 0 0 2px rgba(0, 0, 0, 0.1),
+    0 6px 12px rgba(0, 0, 0, 0.2);
+
+  overflow-y: hidden;   /* verhindert Scrollen */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* Neue Nachrichten unten */
+}
+
+.chat-message {
+  font-family: Dhyana;
+  font-weight: 100;
+  font-size: 0.7rem;
+  letter-spacing: 0.7px;
+  margin-bottom: 8px;
+  word-break: break-word;
+  text-align: left;
+}
+
+.chat-username {
+  font-weight: bold;
+  margin-right: 5px;
+}
+
+.chat-text {
+  white-space: pre-wrap;
+}
+
+
+.chat-input-area {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.chat-input {
+  flex: 1 !important;
+  height: 45px !important;
+  border-radius: 12px !important;
+  border: 1px solid #ccc !important;
+  padding: 0 15px !important;
+  font-size: 1rem !important;
+}
+
+.chat-send-button {
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  background-color: white;
+  border: 1.5px solid black;
+  font-size: 1.3rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+
 
 .ant-form-item-required::before {
   content: \"*\";
