--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -715,6 +715,7 @@ a {
   margin-bottom: 8px;
   word-break: break-word;
   text-align: left;
+  color: rgb(0, 0, 0)
 }
 
 .chat-username {
@@ -900,4 +901,5 @@ textarea {
   content: \"*\";
   visibility: hidden;
 }
+
 
