--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -897,24 +897,27 @@ textarea {
   gap: 20px;
 }
 
+
 .roomcode-box {
   display: flex;
   flex-direction: column;
+  justify-content: center; /* zentriert Inhalt vertikal */
+  padding: 0;
   align-items: flex-start;
   gap: 10px;
-  padding: 8px 12px;
   margin-right: 10px;
 }
 
 .roomcode-label {
   font-size: 1.7rem;
+
   font-weight: bold;
   color: #ffffff;
   text-transform: uppercase;
   font-family: 'Digitalt', sans-serif;
   letter-spacing: 1px;
   -webkit-text-stroke: 0.6px rgb(0, 0, 0);
-  margin-bottom: -13;
+  margin-bottom: -13px;
   margin-top: -30;
 }
  
