--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -816,15 +816,15 @@ a {
   color: white;
   height:40px;
   font-family: 'Digitalt', sans-serif;
-  font-size: 1.9rem;
-  font-weight:bold;
+  font-size: 1.8rem;
+  font-weight:normal;
   text-transform: uppercase;
   padding: 5px 10px;
   letter-spacing: 1.2;
   border-radius: 999px;
   text-align: center;
   width: 100%;
-  -webkit-text-stroke: 0.2px rgb(0, 0, 0);
+  -webkit-text-stroke: 1.6px #a75efa;
 }
 
 .close-button {
@@ -835,10 +835,14 @@ a {
   margin-left: -50px;
   width: 48px;
   height: 48px;
-  border: 4px solid #ffffff;
+  border: 3.7px solid #ffffff;
   color: #ffffff;
   cursor: pointer;
-  -webkit-text-stroke: 2px rgb(255, 255, 255);
+  -webkit-text-stroke: 3px rgb(255, 255, 255);
+}
+
+.close-button:hover {
+  background: #b586eb;
 }
 
 .lobby-setting-group {
